login page layout implemented

--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -5,6 +5,7 @@
     box-shadow: 0 0 30px #f3f1f1;
     max-width: 1920px;
     max-height: 1080px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 .logo {
